--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -1193,25 +1193,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: Calculate the Arbitrage Profits\n",
+    "### Step 4: Calculating the Arbitrage Profits\n",
     "\n",
-    "Calculate the potential profits for each date that you selected in the previous section. Your goal is to determine whether arbitrage opportunities still exist in the Bitcoin market. Complete the following steps:\n",
+    "Calculating the potential profits for each date selected in the previous section. The goal is to determine whether arbitrage opportunities still exist in the Bitcoin market.\n",
     "\n",
-    "1. For each of the three dates, measure the arbitrage spread between the two exchanges by subtracting the lower-priced exchange from the higher-priced one. Then use a conditional statement to generate the summary statistics for each arbitrage_spread DataFrame, where the spread is greater than zero.\n",
+    "1. For each of the three dates, measuring the arbitrage spread between the two exchanges by subtracting the lower-priced exchange from the higher-priced one. Then using a conditional statement, generating the summary statistics for each arbitrage_spread DataFrame, where the spread is greater than zero.\n",
     "\n",
-    "2. For each of the three dates, calculate the spread returns. To do so, divide the instances that have a positive arbitrage spread (that is, a spread greater than zero) by the price of Bitcoin from the exchange you’re buying on (that is, the lower-priced exchange). Review the resulting DataFrame.\n",
+    "2. For each of the three dates, calculating the spread returns by diving the instances that have a positive arbitrage spread (that is, a spread greater than zero) by the price of Bitcoin from the exchange you’re buying on (that is, the lower-priced exchange). Reviewing the resulting DataFrame.\n",
     "\n",
-    "3. For each of the three dates, narrow down your trading opportunities even further. To do so, determine the number of times your trades with positive returns exceed the 1% minimum threshold that you need to cover your costs.\n",
+    "3. For each of the three dates, narrowing down trading opportunities even further by determining the number of times trades with positive returns exceed the 1% minimum threshold needed to cover costs.\n",
     "\n",
-    "4. Generate the summary statistics of your spread returns that are greater than 1%. How do the average returns compare among the three dates?\n",
+    "4. Generating the summary statistics of the spread returns that are greater than 1%.\n",
     "\n",
-    "5. For each of the three dates, calculate the potential profit, in dollars, per trade. To do so, multiply the spread returns that were greater than 1% by the cost of what was purchased. Make sure to drop any missing values from the resulting DataFrame.\n",
+    "5. For each of the three dates, calculating the potential profit, in dollars, per trade by multiplying the spread returns that were greater than 1% by the cost of what was purchased.\n",
     "\n",
-    "6. Generate the summary statistics, and plot the results for each of the three DataFrames.\n",
+    "6. Generating the summary statistics, and plotting the results for each of the three DataFrames.\n",
     "\n",
-    "7. Calculate the potential arbitrage profits that you can make on each day. To do so, sum the elements in the profit_per_trade DataFrame.\n",
+    "7. Calculating the potential arbitrage profits that can be made on each day. To do so,  the elements in the profit_per_trade DataFrame.\n",
     "\n",
-    "8. Using the `cumsum` function, plot the cumulative sum of each of the three DataFrames. Can you identify any patterns or trends in the profits across the three time periods?\n",
+    "8. Using the `cumsum` function, plotting the cumulative sum of each of the three DataFrames.\n",
     "\n",
     "(NOTE: The starter code displays only one date. You'll want to do this analysis for two additional dates)."
    ]
@@ -1220,9 +1220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. For each of the three dates, measure the arbitrage spread between the two exchanges by subtracting the lower-priced exchange from the higher-priced one. Then use a conditional statement to generate the summary statistics for each arbitrage_spread DataFrame, where the spread is greater than zero.\n",
-    "\n",
-    "*NOTE*: For illustration, only one of the three dates is shown in the starter code below."
+    "#### 1. For each of the three dates, measuring the arbitrage spread between the two exchanges by subtracting the lower-priced exchange from the higher-priced one, then using a conditional statement to generate the summary statistics for each arbitrage_spread DataFrame, where the spread is greater than zero."
    ]
   },
   {
