--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -1816,6 +1816,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *The above statistics are empty because after the filters to accomodate trading costs were applied, there were no opportunites for arbitrage on March 26th, 2018.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 260,
    "metadata": {
@@ -1919,6 +1926,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## *The above plot is empty because after the filters to accomodate trading costs were applied, there were no opportunites for arbitrage on March 26th, 2018.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### 7. Calculating the potential arbitrage profits that can be made on each day by summing the elements in the profit_per_trade DataFrame."
    ]
@@ -2123,6 +2139,13 @@
    "source": [
     "# Plotting the cumulative sum of profits for the late profit per trade DataFrame\n",
     "cumulative_profit_late.plot(figsize=(15, 10), title=\"Cumulative Profits Sum - Late Date\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *The above plot is empty because after the filters to accomodate trading costs were applied, there were no opportunites for arbitrage on March 26th, 2018.*"
    ]
   },
   {
